# irelay-mqtt

./: .gitignore  README-api.md  README-publisher.md  README.md  pyproject.toml  requirements.txt  todo.txt
.github/workflows/: dockerimage-api.yml  dockerimage-publisher.yml
assets/: ispindel-report.example.json  nautilis-report.example.json
docker/: Dockerfile-api  Dockerfile-publisher  docker-compose-example.yml
scripts/: build-docker-api.sh  run-api-poetry.sh  run-publisher-poetry.sh
src/: api.py  constants.py  publisher.py
src/model/: destination.py  http_config.py  irelay.py  ispindel.py  mqtt_config.py  nautilis.py
