[tool.poetry]
name = "irelay-mqtt"
version = "0.1.0"
description = ""
authors = ["Tom Homewood."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.0.1"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Jinja2 = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
